RESOLVED FIXED136019
REGRESSION (r168244): Content in horizontal-bt page is offset such that only the end is viewable and there is a white gap at the top
https://bugs.webkit.org/show_bug.cgi?id=136019
Summary REGRESSION (r168244): Content in horizontal-bt page is offset such that only ...
mitz
Reported 2014-08-16 09:15:02 PDT
Created attachment 236717 [details] Test case To reproduce the bug, open the test case in Safari. The content is pushed down such that there is a white gap at the top and only the top (end) of the content is visible.
Attachments
Test case (589 bytes, text/html)
2014-08-16 09:15 PDT, mitz
no flags
Patch (13.87 KB, patch)
2016-01-21 21:14 PST, Simon Fraser (smfr)
mitz: review+
mitz
Comment 1 2014-08-16 09:15:34 PDT
mitz
Comment 2 2014-08-16 09:17:19 PDT
Simon Fraser (smfr)
Comment 3 2016-01-03 11:11:24 PST
Simon Fraser (smfr)
Comment 4 2016-01-21 20:07:52 PST
Not fixed.
Simon Fraser (smfr)
Comment 5 2016-01-21 20:09:06 PST
The bug is that RLC sets the correct position of the root content layer at: m_rootContentLayer->setPosition(FloatPoint(documentRect.x(), documentRect.y() + m_renderView.frameView().yPositionForRootContentLayer())); but the scrolling thread overwrite that with a bad position at: m_scrolledContentsLayer.get().position = FloatPoint(m_scrolledContentsLayer.get().position.x, FrameView::yPositionForRootContentLayer(position, topContentInset, headerHeight())); which ignores the documentRect part.
Simon Fraser (smfr)
Comment 6 2016-01-21 21:14:53 PST
Simon Fraser (smfr)
Comment 7 2016-01-21 22:45:47 PST
Note You need to log in before you can comment on or make changes to this bug.